# 1Code

./: CMakeLists.txt  README.md  abecedarioASCCI.cpp
SFML/: CMakeLists.txt  main.cpp
archivos/: dateProduct.cpp  dateProduct1.cpp  product.txt  product1.txt
class/: 1.book.cpp  1.book.h  1.main.cpp  2.pet.cpp  2.pet_class.cpp  2.pet_class.h  3.mascotas.cpp  classMascota.cpp  classMascota.h
colas/: 1.queue.cpp  2.queue.cpp
dinamica/: 1.exercise.cpp  2.exercise.cpp  3.1.exercise.cpp  4.prueba.cpp  Ejercicio_3MD.cpp
integradoreFINAL/: 1.integrador.cpp  2.integrador.cpp  3.integrador.cpp  4.consigna  4.integrador.cpp  5.consigna  5.integrador.cpp  Incentivos.txt  Ventas.txt  operacionesArreglo.txt
integradoresP1/: 1.MdinamicaRecursividad.cpp  2.integrador.cpp  3.integrador.cpp  Ventas.txt  temperatures.txt
integradoresP2/: 1.ejercicio.cpp  2.ejercicio.cpp  3.ejercicio  3.ejercicio.cpp  4.ejercicio  4.ejercicio.cpp  5.ejercicio  5.ejercicio.cpp  6.ejercicio  6.ejercicio.cpp  Requisitos.txt  Resumen.txt
listasElazadas/: 1.ejercicio.cpp  2.ejercicio.cpp  3.ProductClass.cpp  3.ProductClass.h  3.Stock.cpp  3.Stock.h  3.ejercicio.cpp  3.stockClass.cpp  3.stockStruct.cpp  4.ejercicio.cpp  5.ejercicio  5.listas_archivos.cpp  6.consgina  6.listas.cpp  comunas.txt
parcial1/: ejercicio 1  ejercicio 2  ejercicio 3  herramientas  llamosas_simon_eje1.cpp  llamosas_simon_eje2.cpp  llamosas_simon_eje3.cpp  stock.txt
parcial2/: 1.EJERCICIO COSIGNA  1.LlamosasSimon_eje1.cpp  2.EJERCICIO CONSGINA  2.LlamosasSimon_eje2.cpp  herramientas  hola.cpp
pilas/: 1.stack.cpp  2.stack.cpp
punteros/: 1.main.cpp  2.main.cpp  3.main.cpp  4.main.cpp  5.main.cpp  6.main.cpp
structs/: 3.empleados.cpp  4.gym_activity.cpp
