cmake_minimum_required(VERSION 3.20)
project (Clion_codigos)

set(CMAKE_CXX_STANDARD 14)

add_executable(books class/1.main.cpp class/1.book.cpp)
add_executable(pets class/2.pet.cpp class/2.pet_class.cpp)
add_executable(struct_employee structs/3.empleados.cpp)
add_executable(gym structs/4.gym_activity.cpp)
add_executable(file ./archivos/dateProduct.cpp)
add_executable(file1 ./archivos/dateProduct1.cpp)
add_executable(pointer1 ./punteros/1.main.cpp)
add_executable(pointer2 ./punteros/2.main.cpp)
add_executable(pointer3 ./punteros/3.main.cpp)
add_executable(pointer4 ./punteros/4.main.cpp)
add_executable(pointer5 ./punteros/5.main.cpp)
add_executable(pointer6 ./punteros/6.main.cpp)
add_executable(exercise1 ./dinamica/1.exercise.cpp)
add_executable(exercise2 ./dinamica/2.exercise.cpp)
add_executable(exercise32 ./dinamica/3.1.exercise.cpp)
add_executable(integrador1 integradoresP1/1.MdinamicaRecursividad.cpp)
add_executable(integrador2 integradoresP1/2.integrador.cpp)
add_executable(integrador3 integradoresP1/3.integrador.cpp)
add_executable(abc abecedarioASCCI.cpp)
add_executable(mascotas2 class/3.mascotas.cpp class/classMascota.cpp)
add_executable(ejercicio1 parcial1/llamosas_simon_eje1.cpp)
add_executable(ejercicio2 parcial1/llamosas_simon_eje2.cpp)
add_executable(ejercicio3 parcial1/llamosas_simon_eje3.cpp)
add_executable(listas1 listasElazadas/1.ejercicio.cpp)
add_executable(listas2 listasElazadas/2.ejercicio.cpp )
add_executable(listastruct3 listasElazadas/3.stockStruct.cpp )
add_executable(listasclass3 listasElazadas/3.stockClass.cpp listasElazadas/3.ProductClass.cpp)
add_executable(listas5 listasElazadas/5.listas_archivos.cpp)
add_executable(listas6 listasElazadas/6.listas.cpp)
add_executable(queue1 colas/1.queue.cpp)
add_executable(queue2 colas/2.queue.cpp)
add_executable(stack1 pilas/1.stack.cpp)
add_executable(stack2 pilas/2.stack.cpp)
add_executable(1integrador integradoresP2/1.ejercicio.cpp)
add_executable(2integrador integradoresP2/2.ejercicio.cpp)
add_executable(3integrador integradoresP2/3.ejercicio.cpp)
add_executable(4integrador integradoresP2/4.ejercicio.cpp)
add_executable(5integrador integradoresP2/5.ejercicio.cpp)
add_executable(6integrador integradoresP2/6.ejercicio.cpp)
add_executable(eje1 parcial2/LlamosasSimon_eje1.cpp)

